# magique

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/sub_pages/: magique_declarative.md
src/magique/: __init__.py  just_try.py
src/magique/animations/: __init__.py  animation.py  easing_functions.py  number_animation.py
src/magique/declarative/: __init__.py  binding.py  hook_metrics.py  loop_metrics.py  notify_properties_dataclass.py  notify_updated.py  observable.py  observable_dict.py  observable_list.py  observable_receiver.py  property_listener.py  selective_when.py  when_condition.py  when_functions.py
src/magique/peripherals/keyboard/: __init__.py  key.py  key_actions.py  keys.py  start_hooks.py
src/magique/peripherals/monitors/: __init__.py  monitor_info.py  start_hooks.py
src/magique/peripherals/mouse/: __init__.py  button.py  buttons.py  cursor.py  magique_mouse.py  mouse_actions.py  start_hooks.py  wheel.py
tests/: conftest.py
tests/observables_test/: test_observable.py  test_observable_dict.py  test_observable_list.py
tests/observables_test/bindings_test/: test_receive_bindings.py  test_send_bindings.py  test_single_receive_bindings.py  test_single_send_bindings.py  test_two_way_bindings.py
