[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "magique"
version = "0.0.1"
authors = [
  { name="Schtinguêrch", email="schtinguerch@gmail.com" },
]
description = "PyAutoGUI based library for declarative UI automation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"