[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magique"
version = "0.0.6"
authors = [
  { name="Schtinguêrch", email="schtinguerch@gmail.com" },
]
description = "PyAutoGUI based library for declarative UI automation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyautogui",
    "keyboard",
    "mouse",
    "screeninfo"
]

[project.urls]
Homepage = "https://github.com/Schtinguerch/magique"
Issues = "https://github.com/Schtinguerch/magique/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
